--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@easepick/core": "^1.2.0",
     "@easepick/range-plugin": "^1.2.0",
     "@ionic/angular": "^6.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
+    "@popperjs/core": "^2.11.5",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
