--- a/package.json
+++ b/package.json
@@ -22,6 +22,13 @@
     "@angular/platform-browser": "~13.2.2",
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
+    "@capacitor/android": "3.6.0",
+    "@capacitor/app": "1.1.1",
+    "@capacitor/core": "3.6.0",
+    "@capacitor/haptics": "1.1.4",
+    "@capacitor/ios": "3.6.0",
+    "@capacitor/keyboard": "1.2.3",
+    "@capacitor/status-bar": "1.0.8",
     "@easepick/core": "^1.2.0",
     "@easepick/range-plugin": "^1.2.0",
     "@ionic/angular": "^6.0.0",
@@ -44,6 +51,7 @@
     "@angular/compiler": "~13.2.2",
     "@angular/compiler-cli": "~13.2.2",
     "@angular/language-service": "~13.2.2",
+    "@capacitor/cli": "3.6.0",
     "@ionic/angular-toolkit": "^6.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
