--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/core": "~13.2.2",
     "@angular/forms": "~13.2.2",
     "@angular/material": "~13.3.8",
+    "@angular/material-moment-adapter": "^14.0.5",
     "@angular/platform-browser": "~13.2.2",
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
@@ -37,6 +38,8 @@
     "angular2-uuid": "^1.1.1",
     "ion2-calendar": "^3.5.0",
     "ionic2-calendar": "^0.6.9",
+    "moment": "^2.29.4",
+    "ngx-daterangepicker-material": "^5.0.2",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
