--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.11.5",
     "angular2-uuid": "^1.1.1",
+    "date-fns": "^2.28.0",
     "ion2-calendar": "^3.5.0",
     "ionic2-calendar": "^0.6.9",
     "moment": "^2.29.4",
