--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
                 "output": "assets"
               },
               {
-                "glob": "**/*.svg",
+                "glob": "**/{add-circle-outline,remove-circle-outline,triangle,ellipse,square}.svg",
                 "input": "node_modules/ionicons/dist/ionicons/svg",
                 "output": "./svg"
               }
