--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "cleanIcons":"node ./cleanIcons.js"
+    "cleanIcons": "node ./cleanIcons.js"
   },
   "private": true,
   "dependencies": {
@@ -36,6 +36,7 @@
     "@ionic/angular": "^6.0.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.11.5",
+    "@swimlane/ngx-datatable": "^20.0.0",
     "angular2-uuid": "^1.1.1",
     "date-fns": "^2.28.0",
     "ion2-calendar": "^3.5.0",
