--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@easepick/range-plugin": "^1.2.0",
     "@ionic/angular": "^6.0.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "@popperjs/core": "^2.11.5",
     "@swimlane/ngx-datatable": "^20.0.0",
     "angular2-uuid": "^1.1.1",
