--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,1 +1,9 @@
-{}
+{
+	"appId": "io.ionic.starter",
+	"appName": "tabs",
+	"webDir": "www",
+	"bundledWebRuntime": false,
+	"server": {
+		"url": "http://192.168.1.122:8101"
+	}
+}
