--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@swimlane/ngx-datatable": "^20.0.0",
     "angular2-uuid": "^1.1.1",
     "date-fns": "^2.28.0",
+    "install": "^0.13.0",
     "ion2-calendar": "^3.5.0",
     "ionic2-calendar": "^0.6.9",
     "moment": "^2.29.4",
